sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:15: error: not found: value posAvant
        posAvant=posmin
        ^AlgSelectionSort:20: error: not found: value posAvant
    echange(posAvant,posMin)
            ^